<resources>
    <string name="app_name">myStudentGuide</string>
    <string name="menu_home">Home</string>
    <string name="menu_info">Informazioni</string>
    <string name="menu_offer">Offerta Formativa</string>
    <string name="menu_curricula">Curricula</string>
    <string name="menu_feedback">Feedback</string>
    <string name="univerty_name">Università degli Studi di Salerno</string>
    <string name="department_name">Dipartimento di Informatica</string>
    <string name="communicate">Comunicazione</string>
    <string name="menu_share">Condividi</string>
    <string name="menu_send">Contatti</string>
    <string name="menu_print">Stampa Brochure</string>
    <string name="menu_webSite">Sito Web</string>
    <string name="magistrale">Laurea Magistrale in Informatica</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="personal_area">Guida dello Studente</string>
    <string name="create_guide">Crea o Modifica</string>
    <string name="check_guide">Visualizza</string>
    <string name="share_guide">Stampa e Condividi</string>
    <string name="pdf_saved">GUIDA PERSONALIZZATA CREATA</string>
    <string name="brochure_button">Brochure</string>
    <string name="year_18">2018 - 2019</string>
    <string name="year_17">2017 - 2018</string>
    <string name="year_16">2016 - 2017</string>
    <string name="year_15">2015 - 2016</string>
    <string name="choose_year">Scegli l\'anno</string>
    <string name="pdf_1">INFORMAZIONI GENERALI</string>
    <string name="cap_2">Offerta Formativa Programmata Laura in Informatica</string>
    <string name="pdf_2">OBIETTIVI FORMATIVI</string>
    <string name="pdf_3">SBOCCHI OCCUPAZIONALI</string>
    <string name="pdf_4">RISULTATI DI APPRENDIMENTO ATTESI</string>
    <string name="pdf_5">REQUISITI DI AMMISSIONE E MODALITÀ DI VERIFICA</string>
    <string name="pdf_6">PROSEGUIMENTO DEGLI STUDI</string>
    <string name="pdf_7">ORDINAMENTO DIDATTICO</string>
    <string name="pdf_8">OFFERTA FORMATIVA</string>
    <string name="pdf_9">ATTIVITÀ A SCELTA LIBERA DELLO STUDENTE</string>
    <string name="pdf_10">TIPOLOGIA DELLE FORME DIDATTICHE</string>
    <string name="pdf_11">INSEGNAMENTI A SCELTA</string>
    <string name="pdf_12">ESAMI E ALTRE MODALITÀ DI VERIFICA DEL PROFITTO</string>
    <string name="pdf_13">PROVA FINALE</string>
    <string name="pdf_14">RICONOSCIMENTO DEI CREDITI (CFU)</string>
    <string name="pdf_15">DECADENZA DALLA QUALITÀ DI STUDENTE</string>
    <string name="pdf_16">TIROCINIO O ATTIVITÀ EQUIVALENTE</string>
    <string name="pdf_17">VERIFICA LINGUA STRANIERA</string>
    <string name="cap_3">Offerta Formativa Erogata</string>
    <string name="pdf_18">ASSOCIAZIONE CORSI-DOCENTI</string>
    <string name="pdf_19">DOCENTI DEL CORSO</string>
    <string name="appendice_a">Appendice A - Syllabi delle Attività Didattiche</string>
    <string name="cap_4">Offerta Formativa Programmata</string>

    <string-array name="diciotto_array">
        <item>INFORMAZIONI GENERALI</item>
        <item>OBIETTIVI FORMATIVI</item>
        <item>SBOCCHI OCCUPAZIONALI</item>
        <item>RISULTATI DI APPRENDIMENTO ATTESI</item>
        <item>REQUISITI DI AMMISSIONE E MODALITÀ DI VERIFICA</item>
        <item>PROSEGUIMENTO DEGLI STUDI</item>
        <item>ORDINAMENTO DIDATTICO</item>
        <item>OFFERTA FORMATIVA</item>
        <item>ATTIVITÀ A SCELTA LIBERA DELLO STUDENTE</item>
        <item>TIPOLOGIA DELLE FORME DIDATTICHE</item>
        <item>INSEGNAMENTI A SCELTA</item>
        <item>ESAMI E ALTRE MODALITÀ DI VERIFICA DEL PROFITTO</item>
        <item>PROVA FINALE</item>
    </string-array>
    <string name="submit">Aggiorna</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_infoApp">Informazioni Applicazione</string>
    <string name="button_create">Crea Guida</string>
    <string name="button_share_guide">Condividi Guida</string>
</resources>
