<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@android:color/white"
    android:id="@+id/relativeLayout">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="201dp"
        android:layout_marginTop="16dp"
        android:contentDescription="TODO"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/univerty_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/magistrale"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/buttonOffer"
        android:layout_width="125dp"
        android:layout_height="55dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="32dp"
        android:text="@string/menu_offer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/buttonCurricula"
        android:layout_width="130dp"
        android:layout_height="55dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="32dp"
        android:text="@string/menu_curricula"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/buttonContacts"
        android:layout_width="125dp"
        android:layout_height="55dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:text="@string/menu_send"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonOffer" />

    <Button
        android:id="@+id/buttonCreate"
        android:layout_width="130dp"
        android:layout_height="55dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="8dp"
        android:text="@string/button_create"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCurricula" />

    <Button
        android:id="@+id/buttonShare"
        android:layout_width="125dp"
        android:layout_height="55dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:text="@string/button_share_guide"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonContacts" />

    <Button
        android:id="@+id/buttonBrochure"
        android:layout_width="130dp"
        android:layout_height="55dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="8dp"
        android:text="@string/brochure_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCreate" />

</android.support.constraint.ConstraintLayout>